apps/internal/media/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: svc-media
  labels:
    app: seerr
spec:
  type: ClusterIP
  selector:
    app: seerr
  ports:
    - name: http
      port: 5055
      targetPort: http
